<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".ui.auth.RegistrationFragment">

    <data>
        <variable
            name="RegistrationViewModel"
            type="com.example.abyss.ui.auth.registration.RegistrationViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingLeft="@dimen/fragment_horizontal_margin"
        android:paddingTop="@dimen/fragment_vertical_margin"
        android:paddingRight="@dimen/fragment_horizontal_margin"
        android:paddingBottom="@dimen/fragment_vertical_margin">


        <TextView
            android:id="@+id/registration_textView"
            style="@style/SwitchingButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/registration"
            android:textColor="@color/black"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <com.google.android.material.imageview.ShapeableImageView
            android:id="@+id/shapeable_image_view"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_marginTop="38dp"
            android:scaleType="centerCrop"
            android:enabled="@{RegistrationViewModel.viewEnabled}"
            android:src="@{RegistrationViewModel.userImageUrl}"
            android:onClick="@{() -> RegistrationViewModel.imageSelection()}"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/registration_textView"
            app:shapeAppearanceOverlay="@style/ShapeAppearanceOverlay.App.CornerSize50Percent"
            app:srcCompat="@drawable/ic_user_image_profile" />

        <com.google.android.material.imageview.ShapeableImageView
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_marginStart="85dp"
            android:background="@drawable/bg_com_btn"
            android:enabled="@{RegistrationViewModel.viewEnabled}"
            android:onClick="@{() -> RegistrationViewModel.imageSelection()}"
            android:src="@drawable/ic_add_post"
            app:layout_constraintBottom_toBottomOf="@+id/shapeable_image_view"
            app:layout_constraintStart_toStartOf="@+id/shapeable_image_view"
            app:layout_constraintTop_toTopOf="@+id/shapeable_image_view" />
        <TextView
            android:id="@+id/title_text_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="@+id/username"
            app:layout_constraintTop_toBottomOf="@+id/shapeable_image_view"
            android:layout_marginTop="30dp"
            android:text="@string/username"
            android:textColor="@color/grey"
            android:textSize="18dp"/>
        <EditText
            android:id="@+id/username"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="22dp"
            android:layout_marginEnd="22dp"
            android:enabled="@{RegistrationViewModel.viewEnabled}"
            android:hint="Введите имя пользователя"
            android:maxLength="30"
            android:imeOptions="actionNext"
            android:importantForAutofill="no"
            android:inputType="textPersonName"
            android:selectAllOnFocus="true"
            android:text="@={RegistrationViewModel.username}"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/title_text_name" />
        <TextView
            android:id="@+id/title_text_email"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="@+id/username"
            app:layout_constraintTop_toBottomOf="@+id/username"
            android:layout_marginTop="20dp"
            android:text="@string/password"
            android:textColor="@color/grey"
            android:textSize="18dp"/>
        <EditText
            android:id="@+id/password_edit"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="22dp"
            android:layout_marginEnd="22dp"
            android:enabled="@{RegistrationViewModel.viewEnabled}"
            android:hint="Введите пароль"
            android:imeOptions="actionDone"
            android:importantForAutofill="no"
            android:inputType="textPassword"
            android:selectAllOnFocus="true"
            android:text="@={RegistrationViewModel.password}"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/title_text_password" />
        <TextView
            android:id="@+id/title_text_password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="@+id/username"
            app:layout_constraintTop_toBottomOf="@+id/email_edit"
            android:layout_marginTop="20dp"
            android:text="@string/email"
            android:textColor="@color/grey"
            android:textSize="18dp"/>
        <EditText
            android:id="@+id/email_edit"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="22dp"
            android:layout_marginEnd="22dp"
            android:enabled="@{RegistrationViewModel.viewEnabled}"
            android:hint="Введите Email"
            android:imeOptions="actionNext"
            android:importantForAutofill="no"
            android:inputType="textEmailAddress"
            android:selectAllOnFocus="true"
            android:text="@={RegistrationViewModel.email}"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/title_text_email" />

        <TextView
            android:id="@+id/registration_error"
            hideIfEmpty="@{RegistrationViewModel.errorString}"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:maxLines="3"
            android:textAlignment="viewStart"
            android:textColor="@android:color/holo_red_dark"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/password_edit" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/registration"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="16dp"
            android:background="@drawable/bg_com_btn_with_enabled"
            android:enabled="@{RegistrationViewModel.buttonEnabled}"
            android:onClick="@{() -> RegistrationViewModel.onRegistration()}"
            android:text="@string/sign_up"
            android:paddingStart="20dp"
            android:paddingEnd="20dp"
            android:textAllCaps="false"
            android:textColor="@color/white"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/registration_error" />
        <TextView
            android:id="@+id/login_textView"
            style="@style/SwitchingButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:layout_marginEnd="37dp"
            android:enabled="@{RegistrationViewModel.viewEnabled}"
            android:onClick="@{() -> RegistrationViewModel.onGoToLogin()}"
            android:text="@string/login"
            android:textColor="@color/purple_500"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/registration" />

        <com.github.ybq.android.spinkit.SpinKitView
            android:id="@+id/progressBar"
            style="@style/SpinKitView.MultiplePulse"
            hideIfFalse="@{RegistrationViewModel.loading}"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            app:SpinKit_Color="@color/purple_700"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>